# crawl_foreign_business_data

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  scrapy.cfg  setup.cfg  setup.py  tox.ini
crawl_foreign_business_data/: __init__.py  cmdline.py  items.py  middlewares.py  pipelines.py  runer.py  settings.py  setup.cfg
crawl_foreign_business_data/pipelines/: base_pipeline.py  other_pipeline.py  russia_pipeline.py  spain_pipeline.py
crawl_foreign_business_data/repositories/: mongo_repositories.py  redis_repositories.py
crawl_foreign_business_data/spiders/: other_country_spider.py  russia_spider.py  spain_spider.py  spider.py
test/: test_cmdline.py  test_russia_spider.py  test_spain_spider.py
test/data/: australia_company_info_page.html  australia_page.html  ruaaia_company_info.html  russia_page.html  spain_city_page.html  spain_company_info.html  spain_pages.html
test/pipeline/: test_other_country_pipeline.py  test_russia_pipeline.py  test_spain_pipeline.py
test/repositories/: test_mongo_repositories.py  test_redis_repositories.py
test/spiders/: test_other_country_spiders.py  test_russia_spider.py  test_spain_spider.py
