[metadata]
name = crawl_foreign_business_data
version = 0.0.1

[options]
packages = crawl_foreign_business_data
install_requires =
        requests
    importlib; python_version == "3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    crawl_foreign_business_data = crawl_foreign_business_data.cmdline:main


[options.packages.find]
where = crawl_foreign_business_data
exclude =
    tests*
    docs
