[metadata]
name = crawl_foreign_business_data
version = 0.0.3

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    crawl_foreign_business_data = crawl_foreign_business_data.cmdline:main

