[metadata]
name = crawl_foreign_business_data
version = attr: crawl_foreign_business_data.__version__
author = wanglinbo
description = crawl foreign business data
keywords = crawl_foreign_business_data>
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10

[options]
python_requir